# AronAI

./: .gitignore  README.md  build.gradle  gradle.properties  local.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llama.cpp  llama_jni.cpp
app/src/main/cpp/ggml/: ggml.c  ggml.h
app/src/main/java/com/aronai/: App.kt
app/src/main/java/com/aronai/modules/: LlamaBridge.kt  LlamaService.kt  MainActivity.kt  Translator.kt  VoiceSTT.kt  VoiceTTS.kt
app/src/main/java/com/aronai/ui/: ChatScreen.kt
app/src/main/java/com/aronai/ui/theme/: Color.kt  Theme.kt
app/src/main/res/values/: strings.xml  themes.xml
